# franka-control

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  acceptance.md  goal.md  plan.md  progress.md  pyproject.toml  requirements.txt  todo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  hardware_issue.yml
.github/workflows/: ci.yml
config/: cameras.yaml
docs/: README.md  api.md  community_submission.md  data_collection.md  env_design.md  hardware_validation.md  implementation_plan.md  media_capture.md  phase4_plan_draft.md  quickstart.md  release_materials_checklist.md  ros_comparison.md  troubleshooting.md
docs/assets/: README.md
franka_control/: __init__.py
franka_control/cameras/: __init__.py  camera_manager.py  list_cameras.py
franka_control/config/: waypoints.yaml
franka_control/data/: __init__.py  collector.py  config.py  features.py  state_recorder.py
franka_control/envs/: __init__.py  franka_env.py
franka_control/gripper/: __init__.py  __main__.py  gripper_client.py  gripper_server.py
franka_control/kinematics/: __init__.py  ik_solver.py  verify_fk.py  verify_ik.py
franka_control/kinematics/assets/: fr3v2.urdf
franka_control/robot/: __init__.py  __main__.py  robot_client.py  robot_server.py
franka_control/scripts/: __init__.py  collect_data.py  collect_episodes.py  collect_waypoints.py  measure_latency.py  run_trajectory.py  teleop.py
franka_control/teleop/: __init__.py  keyboard_teleop.py  spacemouse_teleop.py
franka_control/trajectory/: __init__.py  executor.py  planner.py  waypoints.py
scripts/: check_markdown_links.py  collect_validation_info.py  play_dataset.py
tests/: REAL_ROBOT_TEST_PLAN.md  test_data_collection.py  test_franka_env_logic.py  test_gripper.py  test_keyboard_teleop.py  test_kinematics_assets.py  test_list_cameras.py  test_state_recorder.py  test_trajectory.py
