[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "franka-control"
version = "0.2.0"
description = "Franka Research 3 robot control library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yiqi Yu" },
]
requires-python = ">=3.12"
keywords = [
    "franka",
    "franka-research-3",
    "robot-control",
    "teleoperation",
    "imitation-learning",
    "reinforcement-learning",
    "lerobot",
    "no-ros",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scipy",
    "gymnasium",
    "pyyaml",
    "pyzmq",
    "msgpack",
    "torch",
    "torchvision",
    "lerobot>=0.5.0",
    "pyrealsense2",
    "opencv-python",
    "matplotlib",
    "pyspacemouse",
    "pynput",
    "pin",
    "toppra",
]

[project.optional-dependencies]
# Control machine only (requires Franka FCI hardware)
control-machine = [
    "pylibfranka",
    "aiofranka",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["franka_control*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"franka_control.kinematics" = [
    "assets/*.urdf",
    "assets/meshes/**/*.dae",
    "assets/meshes/**/*.stl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Start with high-signal correctness checks so CI can catch syntax/name errors
# without forcing a broad style cleanup in the community-readiness pass.
select = ["E9", "F63", "F7", "F82"]
